<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sembilan_satu"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="127dp"
            android:layout_height="64dp"
            android:layout_marginTop="64dp"
            android:text="@string/semester_1"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sembilan_dua"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="128dp"
            android:layout_height="64dp"
            android:layout_marginTop="8dp"
            android:text="@string/semester_2" app:layout_constraintEnd_toEndOf="@+id/sembilan_satu"
            app:layout_constraintStart_toStartOf="@+id/sembilan_satu"
            app:layout_constraintTop_toBottomOf="@+id/sembilan_satu" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/kelas_9"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
